[tool.poetry]
name = "nb-ld"
version = "0.1.0"
description = ""
authors = ["sneakers-the-rat <JLSaunders987@gmail.com>"]
license = "MPL-2.0"
packages = [
	{ include = "nbld" }
]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
notebook = "^6.4.6"
ipykernel = "^6.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
